--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
 
     <string name="loading">Loading</string>
     <string name="pull_to_refresh">Refresh</string>
+
+    <string name="main_list_wlt">无聊图</string>
+    <string name="main_list_ooxx">妹子图</string>
 </resources>
