--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
 
     <string name="main_list_wlt">无聊图</string>
     <string name="main_list_ooxx">妹子图</string>
+
+    <string name="button_text_oo">OO  %s</string>
+    <string name="button_text_xx">XX  %s</string>
+    <string name="button_text_share">share</string>
 </resources>
