--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="main_list_wlt">无聊图</string>
     <string name="main_list_ooxx">妹子图</string>
     <string name="main_list_post">新鲜事</string>
+    <string name="main_list_joke">段子</string>
 
     <string name="button_text_oo">OO  %s</string>
     <string name="button_text_xx">XX  %s</string>
