--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,8 +13,8 @@
     <string name="main_list_post">新鲜事</string>
     <string name="main_list_joke">段子</string>
 
-    <string name="button_text_oo">OO  %s</string>
-    <string name="button_text_xx">XX  %s</string>
+    <string name="button_text_oo">%s</string>
+    <string name="button_text_xx">%s</string>
     <string name="button_text_comments">Comments</string>
     <string name="button_text_share">Share</string>
     <string name="action_switch_mode">Switch Mode</string>
